--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-(">
 		<title>Sixties Folk</title>
 		<link rel="stylesheet" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<div id="wrapper">
